src/test/deca/context/invalid/wrong_assignation3.deca
// Une autre mauvaise assignation

// Date: 20.01.2022

{
    float b = 2.8;
    int a = b;
}